scribble/scribble-assertions/src/test/resources/good/extensions/assrtcore/safety/assrtprog/AssrtCoreTest29a.scr
module good.extensions.assrtcore.safety.assrtprog.AssrtCoreTest29a;


type <java> "java.lang.Integer" from "rt.jar" as int;  // FIXME: int keyword


//*
global protocol Proto1(role A, role B, role C)
{
	1(x:int) from A to B; @"(x>3)"
	2(y:int) from B to C; @"(y>x)"
	do Proto1(A, B, C);
}
//*/
