scribble/scribble-assertions/src/test/resources/bad/extensions/assrtcore/safety/unknownvar/phantom/AssrtCoreTest28b.scr
module bad.extensions.assrtcore.safety.unknownvar.AssrtCoreTest28b;


type <java> "java.lang.Integer" from "rt.jar" as int;  // FIXME: int keyword


//*
global protocol Proto1(role A, role B, role C, role D)
{
	1(x:int) from A to B; @"(x>3)"
	2(y:int) from B to C; @"(y>x)"
	3(z:int) from C to D; @"(z>x)"  // Not HS
}
//*/
